added notification service

--- a/Backend/authservice/src/main/resources/application.properties
+++ b/Backend/authservice/src/main/resources/application.properties
@@ -16,3 +16,14 @@ security.jwt.expiration-time=3600000
 
 spring.redis.host=localhost
 spring.redis.port=6379
+
+# RabbitMQ connection settings
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+spring.rabbitmq.virtual-host=/
+
+# Custom exchange and routing key
+rabbitmq.exchange=notification-exchange
+rabbitmq.routingkey=register-notification-routing-key
